# cmake-demo

./: .gitmodules  README.md
project/: CMakeLists.txt
project/my-app/: CMakeLists.txt
project/my-app/src/: main.m.cpp
project/my-lib/: CMakeLists.txt
project/my-lib/include/my-lib/: lib_api.hpp
project/my-lib/src/: lib_api.cpp  lib_api.t.cpp
